--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,32 +1,33 @@
-name: Generate Pacman Graph
+name: Generate pacman animation
 
 on:
-  schedule:
-    - cron: "0 0 * * *"  # roda todo dia à meia-noite UTC
-  workflow_dispatch:     # permite rodar manualmente
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
+  workflow_dispatch:
+
+  push:
+    branches:
+    - main
 
 jobs:
-  build:
+  generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: generate pacman-contribution-graph.svg
+        uses: abozanona/pacman-contribution-graph@main
         with:
-          node-version: '18'
+          github_user_name: ${{ github.repository_owner }}
 
-      - name: Install dependencies
-        run: npm install
 
-      - name: Run generator
-        run: npm run generate
-
-      - name: Commit and push output
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add output/
-          git commit -m "update pacman graph" || echo "No changes"
-          git push
+      - name: push pacman-contribution-graph.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
